# codeql-wrapper

./: .codeql.json  .flake8  .gitignore  LICENSE  README.md  SECURITY.md  debug_cli.py  pyproject.toml  run_tests.sh  test_error_handling.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci-orchestrator.yml  docs.yml  lint.yml  release-prepare.yml  release-publish.yml  release-test-pypi.yml  release.yml  test-publish.yml  test.yml
.github/workflows/scripts/: get_latest_build.sh  get_next_release_version.sh
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/blog/: 2025-07-09-welcome-to-docs.md  authors.yml
docs/docs/: api.md  cicd-integration.md  cli-usage.md  installation.md  intro.md
docs/src/components/HomepageFeatures/: index.js
docs/src/pages/: index.js
src/codeql_wrapper/: __init__.py  __main__.py  cli.py
src/codeql_wrapper/domain/: __init__.py
src/codeql_wrapper/domain/entities/: __init__.py  codeql_analysis.py  greeting.py
src/codeql_wrapper/domain/use_cases/: __init__.py  codeql_analysis_use_case.py  hello_world_use_case.py  sarif_upload_use_case.py
src/codeql_wrapper/entrypoints/: __init__.py
src/codeql_wrapper/entrypoints/cli/: __init__.py  analyze.py  cli.py  install.py
src/codeql_wrapper/infrastructure/: __init__.py  codeql_installer.py  codeql_runner.py  directory_manager.py  git_utils.py  language_detector.py  logger.py  system_resource_manager.py
src/codeql_wrapper_v2/application/features/analyze_repository/commands/: run_analysis_command.py
src/codeql_wrapper_v2/application/features/analyze_repository/use_cases/: run_codeql_analysis_use_case.py
src/codeql_wrapper_v2/application/features/detect_projects/: __init__.py
src/codeql_wrapper_v2/application/features/detect_projects/use_cases/: __init__.py  detect_projects_use_case.py
src/codeql_wrapper_v2/application/features/install_codeql/: README.md  __init__.py
src/codeql_wrapper_v2/application/features/install_codeql/commands/: __init__.py  install_codeql_command.py
src/codeql_wrapper_v2/application/features/install_codeql/use_cases/: __init__.py  install_codeql_use_case.py
src/codeql_wrapper_v2/application/use_cases/: detect_projects_use_case.py  install_codeql_use_case.py  run_codeql_analysis_use_case.py
src/codeql_wrapper_v2/domain/constants/: __init__.py  codeql_constants.py  repository_constants.py
src/codeql_wrapper_v2/domain/entities/: __init__.py  analysis_result.py  analyze_repository_request.py  codeql_database.py  detect_projects_request.py  detect_projects_result.py  install_codeql_request.py  project.py  project_metadata.py  repository.py
src/codeql_wrapper_v2/domain/enumerators/: __init__.py  analysis_status.py  language.py  output_format.py  platform.py
src/codeql_wrapper_v2/domain/exceptions/: __init__.py  analysis_exceptions.py  ci_exceptions.py  codeql_exceptions.py  validation_exceptions.py
src/codeql_wrapper_v2/domain/interfaces/: __init__.py  analysis_service.py  ci_detector.py  ci_detector_service.py  codeql_service.py  configuration_reader.py  container_interface.py  project_detector.py
src/codeql_wrapper_v2/domain/services/: __init__.py  project_detection_service.py
src/codeql_wrapper_v2/infrastructure/dependency_injection/: __init__.py  container.py  service_registry.py
src/codeql_wrapper_v2/infrastructure/exceptions/: __init__.py  os_exceptions.py
src/codeql_wrapper_v2/infrastructure/external_tools/: codeql_wrapper.py
src/codeql_wrapper_v2/infrastructure/file_system/: __init__.py  configuration_reader.py  file_operations.py  file_system_analyzer.py  os_operations.py
src/codeql_wrapper_v2/infrastructure/services/: __init__.py  codeql_service.py  git_service.py  language_detector.py  project_detector.py  repository_analysis_service.py
src/codeql_wrapper_v2/presentation/cli/: analysis_command.py  codeql_install_command.py  detect_projects_command.py  main.py
src/codeql_wrapper_v2/presentation/dto/: cli_input.py  cli_input_dto.py  cli_output.py
src/codeql_wrapper_v2/presentation/formatters/: base_formatter.py  human_formatter.py  json_formatter.py  output_formatter.py  output_renderer.py
tests/: __init__.py  test_cli.py  test_codeql_analysis.py  test_codeql_installer.py  test_codeql_runner.py  test_directory_manager.py  test_git_utils.py  test_language_detector.py  test_logger.py  test_sarif_upload_use_case.py  test_system_resource_manager.py  test_use_cases.py
tests/e2e/: test_client_install_e2e.py
