[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "codeql-wrapper"
version = "0.1.13"
description = "A universal Python CLI wrapper for running CodeQL analysis on any type of project (monorepo or single repository) across different CI/CD platforms including Jenkins, GitHub Actions, Harness, and any environment where Python scripts can be executed."
authors = ["Mateus Perdigão Domiciano <mateus.domiciano@moduscreate.com>", "Fernando Matsuo Santos <fernando.matsuo@moduscreate.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/codeql-wrapper"
repository = "https://github.com/yourusername/codeql-wrapper"
documentation = "https://github.com/yourusername/codeql-wrapper"
keywords = ["codeql","monorepo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "codeql_wrapper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.0"
colorama = "^0.4.6"
psutil = "^5.8.0"
gitpython = "^3.1.44"
aiohttp = "^3.12.15"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
black = ">=23,<25"
flake8 = "^6.0.0"
mypy = "^1.0.0"
types-colorama = "^0.4.15"
types-psutil = "^5.8.0"
poethepoet = "^0.36.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
aiofiles = "^24.1.0"
pytest-xdist = "^3.8.0"

[tool.poetry.scripts]
codeql-wrapper = "codeql_wrapper.entrypoints.cli:cli"
codeql-wrapper-v2 = "codeql_wrapper_v2.presentation.cli.codeql_install_command:codeql"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--strict-config", "-n", "auto"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "e2e: End-to-end tests",
    "slow: Slow tests that take several minutes",
    "windows: Windows-specific tests",
    "macos: macOS-specific tests", 
    "linux: Linux-specific tests"
]
# Explicitly ignore tests_projects directory
norecursedirs = ["tests_projects", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]

[tool.poe.tasks]
format = "black src/"
typecheck = "mypy src/"
lint = "flake8 src/"
quality = ["format", "typecheck", "lint"]